Improved build part

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
@@ -1,9 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<meta http-equiv="Content-Style-Type" content="text/css">
 
-<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Adding a JAR file to the build path</title></head>
-<body bgcolor="#ffffff">
+  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+
+
+  <meta http-equiv="Content-Style-Type" content="text/css">
+
+
+
+  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
+  <title>Adding a JAR file to the build path</title>
+</head><body bgcolor="#ffffff">
 <h1 class="Head">
 Adding a JAR file to the build path</h1>
 <p class="Para">
@@ -11,48 +17,20 @@ You can add a JAR file stored either in the workbench or anywhere in your file s
 <p class="Para">
 To add a JAR to your build class path follow these steps:</p>
 <ol>
-  <li> 
-    <p class="Para"> Select the project, and from its pop-up menu, select <b>Properties</b>.</p>
-  </li>
-  <li> 
-    <p class="Para"> In the Properties dialog, select the <b>Java Build Path</b> 
-      page. </p>
-  </li>
-  <li> 
-    <p class="Para"> Click the <b>Libraries</b> tab.</p>
-  </li>
-  <li> 
-    <p class="Para"> Click the <b> <span class="Label"> Add JARs</span></b> button 
-      for adding a workbench internal JAR file, or click the <b> <span class="Label"> 
-      Add External JARs</span></b> button for adding a JAR file stored on the 
-      file system.</p>
-  </li>
-  <li>In the dialog that shows up, select the JAR that you want to add.</li>
+<li><p class="Para"> Select the project, and from its pop-up menu, select <b>Properties</b>.</p></li><li><p class="Para"> In the Properties dialog, select the <b>Java Build Path</b> 
+      page. </p></li><li><p class="Para"> Click the <b>Libraries</b> tab.</p></li><li><p class="Para">You can now either add a JAR file which is contained in your workspace or which is somewhere else:<br></p><ul><li>to add a JAR file which is inside your workspace click the <b><span class="Label"> Add JARs</span></b> button</li><li>to add an external JAR file click the <b><span class="Label"> 
+      Add External JARs</span></b> button</li></ul></li><li>In the dialog that shows up, select the JAR file that you want to add.</li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-4.htm">Java builder</a><br>
-<a href="../concepts/cbuildcp.htm">Build classpath</a></p>
+<p><a href="../concepts/concepts-4.htm">Java builder</a><br><a href="../concepts/cbuildcp.htm">Build classpath</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p>
-<a href="tasks-112.htm">Adding a library 
-folder to the build path</a><br>
-<a href="../tasks/tasks-106.htm">Building a Java 
-program</a><br>
-<a href="../tasks/tasks-108.htm">Building 
-automatically</a><br>
-<a href="../tasks/tasks-109.htm">Building manually</a><br>
-<a href="../tasks/tasks-33.htm">Creating a new JAR 
-file</a><br>
-<a href="../tasks/tasks-111.htm">Viewing and editing 
-a project's build path</a><br>
-<a href="../tasks/tasks-110.htm">Working with build 
+<p><a href="tasks-112.htm">Adding a library 
+folder to the build path</a><br><a href="../tasks/tasks-106.htm">Building a Java 
+program</a><br><a href="../tasks/tasks-108.htm">Building 
+automatically</a><br><a href="../tasks/tasks-109.htm">Building manually</a><br><a href="../tasks/tasks-33.htm">Creating a new JAR 
+file</a><br><a href="../tasks/tasks-111.htm">Viewing and editing 
+a project's build path</a><br><a href="../tasks/tasks-110.htm">Working with build 
 paths</a><br>
-&nbsp;<br>
-
-<img src="../images/ngibmcpy.gif" width="195" height="12"> </p>
-
-
-
-
-
+&nbsp;<br></p>
+<p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
