--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
@@ -1,58 +1,56 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Adding a variable class path entry</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Adding a variable class path entry</H1>
-<P CLASS="Para">
-To add a variable entry to your build class path, follow these steps:</P>
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Adding a variable class path entry</title></head>
+<body bgcolor="#ffffff">
+<h1 class="Head">
+Adding a classpath variable entry</h1>
+<p class="Para">
+To add a classpath variable entry to your Java build path, follow these steps:</p>
 <ol>
   <li>
-<P CLASS="Para">
-Select the project you want to add a variable class path entry to.</P>
+<p class="Para">
+Select the project you want to add a variable class path entry to.</p>
   </li>
   <li>
-<P CLASS="Para">
-From the project's pop-up menu, select <b>Properties</b>. </P>
+<p class="Para">
+From the project's pop-up menu, select <b>Properties</b>. </p>
   </li>
   <li>
-<P CLASS="Para">
-In the Properties page, select the Java Build Path page. </P>
+<p class="Para">
+In the Properties page, select the Java Build Path page. </p>
   </li>
   <li>
-<P CLASS="Para">
-On the <b>Libraries</b> tab, click <b> <SPAN CLASS="Label">
-Add Variable</SPAN></b> for adding a variable that refers to a JAR file.<br>
-<b>Note</b>:	The JRE_LIB variable entry is automatically included for each new project. This variable refers to the runtime JAR of the workbench's default JRE.<br>
-The Classpath Variable Selection page appears. This page allows you to browse the existing variable definitions. </P>
+<p class="Para">
+On the <b>Libraries</b> tab, click <b> <span class="Label">
+Add Variable</span></b> for adding a variable that refers to a JAR file.<br>
+<b>Note</b>:	The JRE_LIB variable entry is automatically included for each
+new project. This variable refers to the runtime JAR of the workbench's default
+JRE.<br>
+The Classpath Variable Selection page appears. This page allows you to browse the existing variable definitions. </p>
   </li>
   <li>
-<P CLASS="Para">
-In the <b> <SPAN CLASS="Label">
-Variable Name</SPAN></b> field, you can select a variable from the list of 
-defined class path variables to add to the class path of this project.</P>
+<p class="Para">
+In the <b> <span class="Label">
+Variable Name</span></b> field, you can select a variable from the list of 
+defined class path variables to add to the class path of this project.</p>
   </li>
   <li>
-<P CLASS="Para">
-In the <b> <SPAN CLASS="Label">
-Path Extension</SPAN></b> field, define the path relative to the variable.</P>
+<p class="Para">
+In the <b> <span class="Label">
+Path Extension</span></b> field, define the path relative to the variable.</p>
   </li>
   <li>
-<P CLASS="Para">
-The <b> <SPAN CLASS="Label">
-Resolved Path</SPAN></b>
- field updates with the current value of the variable.</P>
+<p class="Para">
+The <b> <span class="Label">
+Resolved Path</span></b>
+ field updates with the current value of the variable.</p>
   </li>
   <li>
-<P CLASS="Para">
-Click <b> <SPAN CLASS="Label">
-OK</SPAN></b>.</P>
+<p class="Para">
+Click <b> <span class="Label">
+OK</span></b>.</p>
   </li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
@@ -71,15 +69,14 @@ path variable</a><br>
 a project's build path</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p><a href="../reference/ref-15.htm">Reserved class path variables</a></p>
-<P>&nbsp;<br>
+<p>&nbsp;<br>
 
 &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
-</P>
+</p>
 
 
 
 
 
-</BODY>
-</HTML>
+</body></html>
