*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
@@ -15,5 +15,16 @@
   <li>A dialog comes up with a list of all compilation units that have some not-externalized 
     strings</li>
 </ul>
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+<p><a href="../concepts/cnls.htm">String Externalization</a><br>
+  &nbsp;</p>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+<p><a href="tasks-206.htm">Externalizing Strings</a></p>
+<p> <a href="tasks-202.htm">Finding unused and incorrectly used keys in property 
+  files</a><br>
+  <a href="tasks-180.htm">Using the Externalize Strings wizard</a></p>
+<p>&nbsp;</p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
