*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
@@ -13,29 +13,36 @@
 
   
   <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Externalizing strings</title>
+  <title>Using the Externalize Strings wizard</title>
 
   </head>
 <body bgcolor="#ffffff">
-<h1 class="Head">Externalizing strings</h1>
+<h1 class="Head">Using the Externalize Strings wizard</h1>
 <p><br>
-  To externalize strings:</p>
+  To open the Externalize Strings wizard, do one of the following: </p>
 <ul>
-  <li>To open the Externalize Strings wizard, do one of the following: 
-    <ul>
-      <li>Find strings to externalize (using the <b>Find Strings To Enternalize</b> 
-        function), select an entry in the resulting dialog and press the <b>Externalize</b> 
-        button or</li>
-      <li>Selec the compilation unit in which you want to externalize strings 
-        and selecting <b>Source &gt; Externalize Strings</b> from the menu bar 
-        or</li>
-      <li>In the Java editor, select <b>Source &gt; Externalize Strings</b> from 
-        the pop-up menu</li>
-    </ul>
-  </li>
+  <li>Find strings to externalize (using the <b>Find Strings To Enternalize</b> 
+    function), select an entry in the resulting dialog and press the <b>Externalize</b> 
+    button or</li>
+  <li>Selec the compilation unit in which you want to externalize strings and 
+    selecting <b>Source &gt; Externalize Strings</b> from the menu bar or</li>
+  <li>In the Java editor, select <b>Source &gt; Externalize Strings</b> from the 
+    pop-up menu</li>
 </ul>
 <p><b>&nbsp;Note</b>: Externalizing strings is undoable (with the same restrictions 
   as for refactorings). Use <b>Refactor &gt; Undo</b> from the menu bar to undo 
   externalizing strings.</p>
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+<p><a href="../concepts/cnls.htm">String Externalization</a><br>
+  &nbsp;</p>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+<p><a href="tasks-206.htm">Externalizing Strings</a></p>
+<p> <a href="tasks-100.htm">Undoing a refactoring operation</a><br>
+  <a href="tasks-101.htm">Redoing a refactoring operation</a></p>
+<p> <a href="tasks-189.htm">Key/value page</a><br>
+  <a href="tasks-190.htm">Property file page</a><br>
+</p>
 <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
