--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
@@ -45,5 +45,16 @@ Externalize Strings Key/value page
   <li>Strings from entries marked as <b>'Skip'</b> will not be externalized and 
     not tags will be added to them.</li>
 </ul>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+<p><a href="tasks-206.htm">Externalizing Strings</a></p>
+<p><a href="tasks-1802.htm">Using the Externalize Strings wizard</a></p>
+<p> <a href="tasks-190.htm">Property file page</a></p>
+<p><a href="tasks-100.htm">Undoing a refactoring operation</a><br>
+  <a href="tasks-101.htm">Redoing a refactoring operation</a></p>
+<p><a href="tasks-82.htm">Refactoring with preview</a></p>
+<p><a href="tasks-83.htm">Refactoring without preview</a></p>
+<p> <br>
+</p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
