--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-202.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-202.htm
@@ -35,5 +35,16 @@
 <p><b>Note:</b> This feature assumes that the resource bundle accessor class used 
   a method called <i>getString</i> with a single <i>String</i> parameter to retrieve 
   strings from the property file.</p>
+<p>&nbsp;</p>
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+<p><a href="../concepts/cnls.htm">String Externalization</a><br>
+  &nbsp;</p>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+<p><a href="tasks-206.htm">Externalizing Strings</a></p>
+<p><a href="tasks-188.htm">Finding strings to externalize</a><br>
+  <a href="tasks-180.htm">Using the Externalize Strings wizard</a></p>
+<p>&nbsp;</p>
 <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
