--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-169.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-169.htm
@@ -9,15 +9,32 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head"> Renaming a field</H1>
-<P>&nbsp;<br>
-
-<img src = ../ngibmcpy.gif width="195" height="12">
-
+You can rename a field by modifying its declaration in the compilation 
+  unit in which it is declared. However, if you also want to update all references 
+  to it, do one of the following:
+<ol>
+  <li> In the Package Explorer, double-click the compilation unit where the field 
+    is declared, to open it in the editor.</li>
+  <li> In the Outline view, select the field.</li>
+  <li> From the field's pop-up menu, select <b>Refactor</b> > <b>Rename</b>.</li>
+</ol>
+or 
+<ol>
+  <li> In a Java editor, select a reference to the field (or the field's declaration)</li>
+  <li> From the editor's pop-up menu, select <b>Refactor > Rename</b></li>
+</ol>
+or 
+<ol>
+  <li> In the Package Explorer, double-click the compilation unit where the field 
+    is declared, to open it in the editor.</li>
+  <li> In the Outline view, select the field.</li>
+  <li> From the menu bar, select <b>Refactor</b> > <b>Rename</b>.</li>
+</ol>
+<P><img src="../images/ngrelr.gif" alt="Related reference" NOSAVE border=0 height=27 width=159> 
 </P>
-
-
-
-
-
+<p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a> <br>
+  <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a> 
+<p><br>
+  <img src = ../ngibmcpy.gif border=0> </p>
 </BODY>
 </HTML>
