--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
@@ -42,5 +42,15 @@ Externalize Strings Property File page
     an addtional import to the compilation unit (you can use the <b>Browse</b> 
     button to help you find a class that you want to import.)</li>
 </ul>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+<p><a href="tasks-206.htm">Externalizing Strings</a></p>
+<p><a href="tasks-1802.htm">Using the Externalize Strings wizard</a></p>
+<p> <a href="tasks-189.htm">Key/value page</a></p>
+<p><a href="tasks-100.htm">Undoing a refactoring operation</a><br>
+  <a href="tasks-101.htm">Redoing a refactoring operation</a></p>
+<p><a href="tasks-82.htm">Refactoring with preview</a></p>
+<p><a href="tasks-83.htm">Refactoring without preview</a></p>
+<p></p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
