--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
@@ -10,21 +10,28 @@
   <h1>Creating a new JAR file</h1>
   <p class=para>To create a new JAR file in the workbench:</p>
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the Package Explorer, you can optionally select one or more 
-    Java elements to export.</p>
+    </span> In the Package Explorer, you can optionally pre-select one or more 
+    Java elements to export. (These will be automatically selected in the <b>JAR 
+    Package Specification</b> wizard page, described in Step 4.)</p>
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> From the menu bar, select <b>File</b> &gt; <b>Export</b>.</p>
   <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Select <b>JAR file</b>, then click <span class=label><b>Next</b></span>. 
   </p>
   <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Select the resources that you want to export in the<span
-class=label> <b>Select the resources to export </b></span>field </p>
+    </span> In the <b>Jar Package Specification</b> page, select the resources 
+    that you want to export in the<span
+class=label> <b>Select the resources to export </b></span>field. </p>
   <p class=para> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Select the appropriate check box to specify whether you want to <b>Export 
     generated class files and resources</b> or <b>Export Java source files and 
     resources</b>.<br>
-    <b>Note</b>: Selected resources are exported in both cases.</p>
+  </p>
+</div>
+<blockquote> 
+  <div class=Section1><b>Note</b>: Selected resources are exported in both cases.</div>
+</blockquote>
+<div class=Section1> 
   <p class=para> 6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> In the <span class=label><b>Select the export destination</b></span> 
     field, either type or click <span class=label><b>Browse</b></span> to select 
@@ -37,8 +44,13 @@ class=label> <b>Select the resources to export </b></span>field </p>
     without warning </b>check box. If you clear this<b> </b>check box, </span>then 
     you will be prompted to confirm the replacement of each file that will be 
     overwritten.<br>
-    <b>Note</b>: The overwrite option is applied when writing the JAR file, the 
-    JAR description, and the manifest file.</p>
+  </p>
+</div>
+<blockquote>
+  <div class=Section1><b>Note</b>: The overwrite option is applied when writing 
+    the JAR file, the JAR description, and the manifest file.</div>
+</blockquote>
+<div class=Section1>
   <p class=para> 9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> You have two options: </p>
   <ol start=9 type=1>
