--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-36.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-36.htm
@@ -10,18 +10,16 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
 Regenerating a JAR file</H1>
-<P CLASS="Para">
-You can use a JAR file description to regenerate a previously-created JAR file.</P>
+<P CLASS="Para"> You can use a JAR file description to regenerate a previously 
+  created JAR file.</P>
 <ol>
   <li>
 <P CLASS="Para">
 Select one or more JAR file descriptions in your workbench.</P>
   </li>
   <li>
-<P CLASS="Para">
-From the selection's pop-up menu, select <b> <SPAN CLASS="Label">
-Create JAR</SPAN></b>.
-The JAR file(s) are re-generated.</P>
+    <P CLASS="Para"> From the selection's pop-up menu, select <b> <SPAN CLASS="Label"> 
+      Create JAR</SPAN></b>. The JAR file(s) are regenerated.</P>
   </li>
 </ol>
 <DIV CLASS="XRefList">
