--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
@@ -21,10 +21,10 @@
       shows all supertypes and the hierarchy of all implemented interfaces. The 
       selected type is always shown in the top-left corner.</li>
     <li class=MsoNormal style='     '><span class=label><b>Show the Subtype Hierarchy</b></span> 
-      displays the supertype hierarchy of a type. This view shows all subtypes 
-      of the selected type and all implementers of the selected interface (if 
-      the view is opened on an interface). The selected type is always shown in 
-      the top-left corner.</li>
+      displays the subtype hierarchy of a type. This view shows all subtypes of 
+      the selected type and all implementers of the selected interface (if the 
+      view is opened on an interface). The selected type is always shown in the 
+      top-left corner.</li>
   </ul>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
