--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
@@ -13,32 +13,21 @@
 <h1>
 Opening a type hierarchy on a Java element</h1>
 
-<div class="para">To open a type hierarchy:</div>
-
-<ul>
-<li>
-Select a java element in a Java view and</li>
-
-<ul>
-<li>
-Press <b>F4</b> or</li>
-
-<li>
-Choose <b>Open Type Hierarchy</b> from the view’s pop-up menu or</li>
-
-<li>
-Drag and drop the element to the Hierarchy view or</li>
-
-<li>
-Press <b>Ctrl+Shift+H</b> and select a type from the list in the resulting
-dialog (this works only for classes and interfaces) or</li>
-
-<li>
-Select <b>Navigate > Open Type in Hierarchy</b> from the menu bar (this
-works only for classes and interfaces).</li>
-</ul>
-</ul>
-
+  <p>There are five ways to open a type hierarchy. Select a java element in a 
+    Java view and:</p>
+  <ul>
+    <li> Press <b>F4</b></li>
+      <br>or
+    <li> Choose <b>Open Type Hierarchy</b> from the view’s pop-up menu</li>
+	      <br>or
+    <li> Drag and drop the element to the Hierarchy view</li>
+	      <br>or
+    <li> Press <b>Ctrl+Shift+H</b> and select a type from the list in the resulting 
+      dialog (this works only for classes and interfaces)</li>
+	        <br>or
+    <li> Select <b>Navigate > Open Type in Hierarchy</b> from the menu bar (this 
+      works only for classes and interfaces).</li>
+  </ul>
 <p><br><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
