--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
@@ -13,57 +13,73 @@
     in your workbench.</p>
   <h2>Creating a new manifest</h2>
   <ol start=1 type=1>
-    <li class=MsoNormal style='     '>Follow the procedure for creating a JAR 
-      file, but click <span class=label><b>Next</b></span> in the last step to 
-      go to the JAR Packaging Options page.</li>
-    <li class=MsoNormal style='     '>Set any advanced options that you want to 
-      set, and then click <span class=label><b>Next</b></span> again to go to 
-      the JAR Manifest Specification page.</li>
-    <li class=MsoNormal style='     '>If it is not already selected, click the 
-      <span class=label><b>Generate the manifest file</b></span> button.</li>
-  </ol>
-  <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> You can now choose to save the manifest in the workbench. This will 
-    save the manifest for later use. Click <span class=label>Save the manifest 
-    in the workspace</span>, then click <span class=label><b>Browse</b></span> 
-    next to the <span class=label><b>Manifest file</b></span> field to specify 
-    a path and file name for the manifest.</p>
-  <p class=para> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> If you decided to save the manifest file in the previous step and 
-    you chose to save the JAR description on the previous wizard page, then you 
-    can choose to reuse it in the JAR description (by selecting the <b>Reuse and 
-    save the manifest in the workspace </b>checkbox). This means that the saved 
-    file will be used when the JAR file is recreated from the JAR description.This 
-    option is useful if you want to modify or replace the manifest file before 
-    recreating the JAR file from the description.</p>
-  <p class=para> 6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> You can choose to seal the JAR and eventually exclude some packages 
-    from being sealed or specify a list with sealed packages. By default, nothing 
-    is sealed. </p>
-  <p class=para> 7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Click the <span class=label><b>Browse</b></span> button next to the 
-    <span class=label><b>Main-Class</b></span> field to specify the entry point 
-    for your applications.<br>
-    <b>Note</b>: If your class is not in the list, then you forgot to select it 
-    at the beginning.</p>
-  <p class=para> 8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Click <span class=label><b>Finish</b></span>. This will create the 
-    JAR, and optionally a JAR description and a manifest file.</p>
+    <li class=MsoNormal style='     '>
+      <p>Follow the procedure for creating a JAR file, but click <span class=label><b>Next</b></span> 
+        in the last step to go to the JAR Packaging Options page.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>Set any advanced options that you want to set, and then click <span class=label><b>Next</b></span> 
+        again to go to the JAR Manifest Specification page.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>If it is not already selected, click the <span class=label><b>Generate 
+        the manifest file</b></span> button.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>You can now choose to save the manifest in the workbench. This will save 
+        the manifest for later use. Click <span class=label>Save the manifest 
+        in the workspace</span>, then click <span class=label><b>Browse</b></span> 
+        next to the <span class=label><b>Manifest file</b></span> field to specify 
+        a path and file name for the manifest.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>If you decided to save the manifest file in the previous step and you 
+        chose to save the JAR description on the previous wizard page, then you 
+        can choose to reuse it in the JAR description (by selecting the <b>Reuse 
+        and save the manifest in the workspace </b>checkbox). This means that 
+        the saved file will be used when the JAR file is recreated from the JAR 
+        description.This option is useful if you want to modify or replace the 
+        manifest file before recreating the JAR file from the description.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>You can choose to seal the JAR and optionally exclude some packages from 
+        being sealed or specify a list with sealed packages. By default, nothing 
+        is sealed. </p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>Click the <span class=label><b>Browse</b></span> button next to the <span class=label><b>Main-Class</b></span> 
+        field to specify the entry point for your applications.<br>
+        <b>Note</b>: If your class is not in the list, then you forgot to select 
+        it at the beginning.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>Click <span class=label><b>Finish</b></span>. This will create the JAR, 
+        and optionally a JAR description and a manifest file.</p>
+    </li>
+	</ol>
   <h2>Using an existing manifest</h2>
   <p>You can use an existing manifest file that already exists in your workbench.</p>
   <ol start=1 type=1>
-    <li class=MsoNormal style='     '>Follow the procedure for creating a JAR 
-      file, but click <span class=label><b>Next</b></span> in the last step to 
-      go to the JAR Packaging Options page.</li>
-    <li class=MsoNormal style='     '>Set any advanced options that you want to 
-      set, and the click <span class=label><b>Next</b></span> again to go to the 
-      JAR Manifest Specification page.</li>
-    <li class=MsoNormal style='     '>Click the <span class=label><b>Use existing 
-      manifest from workspace </b>radio </span>button.</li>
-    <li class=MsoNormal style='     '>Click the <span class=label><b>Browse</b></span> 
-      button to choose a manifest file from the workbench.</li>
-    <li class=MsoNormal style='     '>Click <span class=label><b>Finish</b></span>. 
-      This will create the JAR and optionally a JAR description.</li>
+    <li class=MsoNormal style='     '>
+      <p>Follow the procedure for creating a JAR file, but click <span class=label><b>Next</b></span> 
+        in the last step to go to the JAR Packaging Options page.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>Set any advanced options that you want to set, and the click <span class=label><b>Next</b></span> 
+        again to go to the JAR Manifest Specification page.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>Click the <span class=label><b>Use existing manifest from workspace </b>radio 
+        </span>button.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>Click the <span class=label><b>Browse</b></span> button to choose a manifest 
+        file from the workbench.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>Click <span class=label><b>Finish</b></span>. This will create the JAR 
+        and optionally a JAR description.</p>
+    </li>
   </ol>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
