--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
@@ -8,17 +8,16 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Opening a type hierarchy on the current text selection</h1>
-  <p class=head>To open a type hierarchy on a text selection:</p>
-  <p class=para>Select a Java element or some text in the editor, and do one of 
-    the following:</p>
+  <p class=head>To open a type hierarchy on a text selection, select a Java element 
+    or part of the text in the editor, and do one of the following:</p>
   <ul type=disc>
     <li class=MsoNormal style='     '>Press <b>F4</b> </li>
     <li class=MsoNormal style='     '>select <span class=label><b>Open Type Hierarchy</b></span> 
       from the editor's pop-up menu.</li>
   </ul>
   <p><b>Note:</b> If the selected Java element (or editor selection) is not a 
-    type or a compilation unit, the hierarchy will be open on the type in which 
-    the current selection lies.</p>
+    type or a compilation unit, the hierarchy will be open on the type enclosing 
+    the current selection.</p>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-7.htm">Java editor</a></p>
