--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
@@ -9,21 +9,26 @@
 <div class=Section1> 
   <h1>Overriding a method using the Hierarchy view</h1>
   <p class=para>You can use the Hierarchy view to override a method:</p>
-  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Open the type hierarchy for the type in which you want to add the 
-    overriding method.<br>
-    <b>Note:</b> It does not matter whether the subtypes, supertypes, or type 
-    hierarchy is displayed.</p>
-  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the list pane of the Hierarchy view, ensure that the <span
+  <ol start=1 type=1>
+    <li class=MsoNormal style='     '>
+      <p>Open the type hierarchy for the type in which you want to add the overriding 
+        method.<br><br>
+        <b>Note:</b> It does not matter whether the subtypes, supertypes, or type 
+        hierarchy is displayed.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>In the list pane of the Hierarchy view, make sure that the <span
 class=label><b>Show All Inherited Members</b></span> button is toggled on in order 
-    to see all the inherited members.<br>
-    <b>Note:</b> The selection might not show all members if a filter (such as 
-    <b>Hide Fields</b> or <b>Hide Static Members</b>) is active.</p>
-  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> From the pop-up menu of one of the inherited methods, select <span
+        to see all the inherited members.<br><br>
+        <b>Note:</b> The selection might not show all members if a filter (such 
+        as <b>Hide Fields</b> or <b>Hide Static Members</b>) is active.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>From the pop-up menu of one of the inherited methods, select <span
 class=label><b>Override in <i>class name</i></b></span> (where <i>class name</i> 
-    is the name of the class in which the method will be created).</p>
+        is the name of the class in which the method will be created).</p>
+    </li>
+	</ol>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
