*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-22.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-22.htm
@@ -54,7 +54,7 @@ From the menu bar, click <b>File</b> &gt; <b>New</b> &gt; <b>Java Interface</b>.
 <a href="../concepts/concepts-3.htm">Java projects</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
 <p><a href="../tasks/tasks-23.htm">Creating a 
-standalone interface</a><br>
+top-level interface</a><br>
 <a href="../tasks/tasks-24.htm">Creating a nested 
 interface</a><br>
 <a href="../tasks/tasks-25.htm">Creating a new interface in a 
