--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
@@ -53,8 +53,8 @@ From the menu bar, select <b>Refactor</b> > <b>Rename</b>.</li>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="tasks-17.htm">Creating a new Java class</a>
 <br><a href="tasks-24.htm">Creating a nested interface</a>
-<br><a href="tasks-23.htm">Creating a standalone interface</a>
-<br><a href="tasks-18.htm">Creating a standalone class</a>
+<br><a href="tasks-23.htm">Creating a top-level interface</a>
+<br><a href="tasks-18.htm">Creating a top-level class</a>
 <br><a href="tasks-19.htm">Creating a nested class</a>
 <br><a href="tasks-20.htm">Creating a class in an existing compilation
 unit</a>
