--- a/bundles/org.eclipse.jdt.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.jdt.doc.isv/questions/index.html
@@ -16,54 +16,42 @@
 <h2> JDT Core</h2>
  
 <ul>
-   <li><a href="../guide/jdt_api_run.htm">How do I launch a Java program
- from the     platform?</a>
-   </li>
-   <li><a href="../guide/jdt_api_compile.htm">How do I programmatically compile 
- a     Java program?</a>
-   </li>
-   <li><a href="../guide/jdt_api_classpath.htm">How do I setup a project's 
-      classpath?</a>
-   </li>
-   <li><a href="../guide/jdt_api_manip.htm">How do I manipulate     Java
- code?</a>
-   </li>
-   <li><a href="../guide/jdt_api_search.htm">How do I use the Java search 
-       engine?</a>
-   </li>
-   <li><a href="../guide/jdt_api_options.htm">What are the JDT Core options?
-     </a>
-   </li>
-   <li><a href="../guide/jdt_api_codeassist.htm">How do I programmatically 
-  use     CodeAssist and CodeSelect?</a>
-   </li>
-   <li><a href="../guide/jdt_int_elements.htm">How are Java projects, folders,
-       and files different from regular resources?</a>
-   </li>
-   <li><a href="../guide/jdt_int_devprocess.htm">What is available in the 
-  JDT     Core API Packages?</a>
-   </li>
- 
+  <li><a href="../guide/jdt_int_devprocess.htm">What is available in the JDT Core 
+    API Packages?</a> </li>
+  <li><a href="../guide/jdt_api_run.htm">How do I launch a Java program from the 
+    platform?</a> </li>
+  <li><a href="../guide/jdt_api_compile.htm">How do I programmatically compile 
+    a Java program?</a> </li>
+  <li><a href="../guide/jdt_api_classpath.htm">How do I setup a project's classpath?</a> 
+  </li>
+  <li><a href="../guide/jdt_api_manip.htm">How do I manipulate Java code?</a> 
+  </li>
+  <li><a href="../guide/jdt_api_search.htm">How do I use the Java search engine?</a> 
+  </li>
+  <li><a href="../guide/jdt_api_options.htm">What are the JDT Core options? </a> 
+  </li>
+  <li><a href="../guide/jdt_api_codeassist.htm">How do I programmatically use 
+    CodeAssist and CodeSelect?</a> </li>
+  <li><a href="../guide/jdt_int_elements.htm">How are Java projects, folders, 
+    and files different from regular resources?</a> </li>
 </ul>
  
 <h2> JDT UI</h2>
  
 <ul>
-   <li><a href="../guide/jdt_api_open_editor.htm">How do I programmatically 
-launch   a Java     editor on a file?</a>
+  <li><a href="../guide/jdt_int_ui.htm">What is available in the JDT UI packages?</a> 
   </li>
-  <li><a href="../guide/jdt_api_prompter.htm">How do I create a Java specific
-prompter dialog?</a>
-    <br>
-   </li>
-   <li><a href="../guide/jdt_api_render.html">How do I present Java elements 
-  in a standard JFace viewer?</a>
-     <br>
-   </li>
-   <li><a href="../guide/jdt_int_ui.htm">What is available in the JDT UI
-    packages?</a>
-   </li>
- 
+  <li><a href="../guide/jdt_api_open_editor.htm">How do I programmatically launch 
+    a Java editor on a file?</a> </li>
+  <li><a href="../guide/jdt_api_prompter.htm">How do I create a Java specific 
+    prompter dialog?</a> <br>
+  </li>
+  <li><a href="../guide/jdt_api_render.html">How do I present Java elements in 
+    a standard JFace viewer?</a></li>
+  <li><a href="../guide/jdt_api_write_jar_file.htm">How do I write a Jar file?</a></li>
+  <li><a href="../guide/jdt_api_new_wizard_page.htm">How to create a customized 
+    new Java element wizard page?</a><br>
+  </li>
 </ul>
  <a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" border="0">
  </a>
