updated related references

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
@@ -22,7 +22,15 @@ When a breakpoint is disabled, it will not cause threads to suspend. Disabled br
 </UL>
 <P CLASS="Para">
 Debugging breakpoints are displayed in the marker bar in the editor area and in the Breakpoints view.</P>
-<P>&nbsp;<br>
+
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-4.htm"">Run menu</a><br />
+      <a href="../reference/ref-35.htm"">Breakpoints view</a><br />
+    </p>
 
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
 </p>
