--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
@@ -24,6 +24,15 @@ Classpath variable</a>
 <p></p>
 
 
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-15.htm">Classpath Variables preferences</a><br />
+      <a href="../reference/ref-123.htm">Java Build Path properties</a><br />
+    </p>
+
 <p><br>
 </p><p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
 </p>
