--- a/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
@@ -25,11 +25,15 @@ Build classpath</a>
 </p>
 
 <p class="Para"><a href="../tasks/tasks-114.htm">Adding a variable classpath entry</a><br><a href="../tasks/tasks-116.htm">Attaching source to a classpath variable</a><br><a href="../tasks/tasks-117.htm">Defining a classpath variable</a><br><a href="../tasks/tasks-118.htm">Deleting a classpath variable</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
-<a href="../reference/ref-15.htm">Classpath variables</a>
-<br>
-</p>
 
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-15.htm"">Classpath Variables preferences</a><br />
+      <a href="../reference/ref-123.htm"">Java Build Path properties</a><br />
+    </p>
 
 <p><br>
 </p><p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
