--- a/bundles/org.eclipse.jdt.doc.user/concepts/cjunit.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cjunit.htm
@@ -11,6 +11,14 @@
 <h1>
 JUnit intergation</h1>
 
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-preferences-junit.htm"">JUnit preferences</a>
+    </p>
+
 <p><br>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
 </p>
