--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -71,7 +71,9 @@
     <a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a><br>
     <a href="../tasks/tasks-156.htm">Viewing runtime exceptions</a></p>
   <p><img border="0" width="159" height="27" id="_x0000_i1027" src="../images/ngrelr.gif" alt="Related reference"></p>
-  <p><a href="../reference/ref-5.htm">Java editor actions</a><br>
+  <p>
+    <a href="../reference/ref-5.htm">Java editor actions</a><br>
+    <a href="../reference/ref-21.htm">Java editor preferences</a><br>
     <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
     <a href="../reference/ref-24.htm">Views and editors</a></p>
 </div>
