updated related references

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cjunit.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cjunit.htm
@@ -16,7 +16,8 @@ JUnit intergation</h1>
     </p>
 
     <p>
-      <a href="../reference/ref-preferences-junit.htm"">JUnit preferences</a>
+      <a href="../reference/ref-149.htm"">Run menu</a><br />
+      <a href="../reference/ref-preferences-junit.htm"">JUnit preferences</a><br />
     </p>
 
 <p><br>
