--- a/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
@@ -38,14 +38,29 @@
   <li>Suport for finding unused and incorrectly used keys for strings externalized 
     to property files.</li>
 </ul>
-<div class=Section1> 
-  <p><img src="../images/ngrelt.gif" alt="Related tasks" border=0 id="_x0000_i1026" height=27 width=159> 
-  <p><a href="../tasks/tasks-188.htm">Finding trings to externalize</a>
-  <p><a href="../tasks/tasks-202.htm">Finding unused and incorrectly used keys in property files </a> 
-  <p><a href="../tasks/tasks-180.htm">Using the Externalize Strings wizard</a> 
+
+    <p>
+      <img src="../images/ngrelt.gif" alt="Related tasks" />
+    </p>
+    
+    <p>
+      <a href="../tasks/tasks-188.htm">Finding strings to externalize</a><br />
+      <a href="../tasks/tasks-202.htm">Finding unused and incorrectly used keys in property files </a><br />
+      <a href="../tasks/tasks-180.htm">Using the Externalize Strings wizard</a><br />
+    </p>
+    
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-menu-source.htm">Source menu</a><br />
+      <a href="../reference/ref-wizard-externalize-strings.htm"">Externalize Strings wizard</a>
+    </p>
+
   <p><br>
   <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
   </p>
-</div>
+
 </body>
 </html>
