--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-11.htm
@@ -29,6 +29,7 @@ result of evaluating an expression</a><br>
 errors and warnings</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <P CLASS="Para">
+<a href="../reference/ref-129.htm">New Java Scrapbook Page wizard</a><br>
 <a href="../reference/ref-34.htm">Java scrapbook page</a><br>
 <a href="../reference/ref-56.htm">Expressions view</a></P>
 
