--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -35,6 +35,16 @@
     <a href="../tasks/tasks-57.htm">Generating accessors</a><br>
     <a href="../tasks/tasks-12.htm">Organizing Java projects</a><br>
 </div>
+
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-121.htm">New Java Project wizard</a><br />
+      <a href="../reference/ref-preferences-new-project.htm">New Project preferences</a><br />
+    </p>
+
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
 </body></html>
