--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
@@ -33,6 +33,16 @@
   <a href="../tasks/tasks-111.htm">Viewing and editing a project's build path</a><br>
   <a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a><br>
   <a href="../tasks/tasks-110.htm">Working with build paths</a></p>
+
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-123.htm">Java Build Path properties</a><br />
+      <a href="../reference/ref-preferences-compiler.htm">Java Compiler preferences</a><br />
+    </p>
+
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
 </body></html>
