--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -7,7 +7,7 @@
   <p class="para">The Java development tools contribute the following views to the 
     workbench:</p>
   
-<h2>Package Explorer</h2>
+<h2>Package Explorer view</h2>
 
   <p class="para">The Package Explorer view shows the Java element hierarchy of 
     the Java projects in your workbench. It provides you with a Java-specific 
@@ -70,7 +70,8 @@
     <a href="../reference/ref-52.htm">Display view</a><br>
     <a href="../reference/ref-56.htm">Expressions view</a><br>
     <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
-    <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
+    <a href="../reference/ref-view-package-explorer.htm">Package Explorer view</a><br>
+    <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a><br>
     <a href="../reference/ref-74.htm">Variables view</a><br>
     <a href="../reference/ref-24.htm">Views and editors</a><br>
     <br>
