--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -78,6 +78,16 @@
   <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"></p>
   <p><a href="../tasks/tasks-79.htm">Searching Java code</a></p>
 </div>
+
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+   <p>
+      <a href="../reference/ref-menu-search.htm">Search actions</a><br />
+      <a href="../reference/ref-131.htm">Java Search tab</a><br />
+    </p>
+
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
 </body></html>
