--- a/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
@@ -10,6 +10,16 @@
 <h1>
 Templates</h1>
 
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-menu-edit.htm">Edit menu</a><br />
+      <a href="../reference/ref-143.htm">Java Content Assist</a><br />
+      <a href="../reference/ref-preferences-templates.htm">Templates preferences</a>
+    </p>
+
 <p><br>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
 </p>
