--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -1338,8 +1338,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">Edit/Go to text start</TD>
 <TD ALIGN="left">Edit/Go to text start</TD>
-<TD ALIGN="left">
-</TD>
+<TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
@@ -1352,8 +1351,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">Edit/Go to text end</TD>
 <TD ALIGN="left">Edit/Go to text end</TD>
-<TD ALIGN="left">
-</TD>
+<TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
