--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
@@ -8,8 +8,8 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Opening a type hierarchy on the current text selection</h1>
-  <p class=head>To open a type hierarchy on a text selection, select a Java element 
-    or part of the text in the editor, and do one of the following:</p>
+  <p class=head>To open a type hierarchy on a text selection, select the name 
+    of a Java element in the editor, and do one of the following:</p>
   <ul type=disc>
     <li class=MsoNormal style='     '>Press <b>F4</b> </li>
     <li class=MsoNormal style='     '>select <span class=label><b>Open Type Hierarchy</b></span> 
