--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
@@ -9,21 +9,29 @@
 <div class=Section1> 
   <h1>Filtering elements</h1>
   <p class=para>To filter elements:</p>
-  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> On the Package Explorer toolbar, click the <b>Menu</b> button 
-    and choose <b>Filters</b>.</p>
-  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Select or clear the filters that you want to apply to the view (read 
-    <b>Filter Description </b>to learn about the selected filter&#8217;s functionality).</p>
-  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Optionally, you can select patterns for filtering the view. To do 
-    so:</p>
-  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Select the <b>Name filter patterns</b> checkbox at the top of the 
-    dialog</p>
-  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the text field below, specify the desired patterns (names matching 
-    one of the patterns will be hidden).</p>
+<ol start=1 type=1>
+    <li class=MsoNormal style='     '>
+      <p>On the Package Explorer toolbar, click the <b>Menu</b> button and choose 
+        <b>Filters</b>.</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>Select or clear the filters that you want to apply to the view (read 
+        <b>Filter Description </b>to learn about the selected filter&#8217;s functionality).</p>
+    </li>
+    <li class=MsoNormal style='     '>
+      <p>Optionally, you can select patterns for filtering the view:</p>
+    </li>
+</ol>
+</div>
+
+<ul>
+  <li>
+    Select the <b>Name filter patterns</b> checkbox at the 
+      top of the dialog. </li>
+  <li>In the text field below, specify the desired patterns 
+      (names matching one of the patterns will be hidden).</li> 
+</ul>
+<div class=Section1>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
