--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
@@ -14,31 +14,31 @@
 Moving folders, packages, and files</h1>
 
 <ol>
-<li>
-In the Package Explorer, select the folder, package, or file you want
-to move.</li>
-
-<li>
-Drag and drop the selected resources in the desired location.</li>
+    <li>
+      <p> In the Package Explorer, select the folder, package or file you want 
+        to move.</p>
+    </li>
+    <li>
+      <p> Drag-and-drop the selected resources onto the desired location.</p>
+    </li>
 </ol>
 
-<div class="para"><b>Note</b>: You can use drag-and-drop to move resources
-between different workbench windows. Select a resource you want to move,
-and drag-and-drop it in the desired destination. If you want to copy rather
-than move, hold the <b>Ctrl</b> key down while dragging.
-<br>&nbsp;</div>
+  <div class="para"><b>Note</b>: You can use drag-and-drop to move resources between 
+    different workbench windows. Select a resource you want to move, and drag-and-drop 
+    it onto the desired destination. If you want to copy rather than move, hold 
+    the <b>Ctrl</b> key down while dragging. <br>
+    &nbsp;</div>
 
 <div class="para">You can also use drag-and-drop to copy resources between
 the workbench and the desktop (both ways), but you cannot move files from
 the desktop to the workbench using drag-and-drop.
 <br>&nbsp;</div>
 
-<div class="para">Moving compilation units updates only package declarations;
-it does not update references to the classes declared in those compilation
-units. This can result in compilation errors. If you use the <b>Refactor</b>
-> <b>Move </b>command from the selected resource's pop-up menu, all references
-to classes defined in the selected compilation units will be updated as
-well.</div>
+  <div class="para">Moving compilation units updates only package declarations; 
+    it does not update references to the classes declared in those compilation 
+    units. This can result in compilation errors. If you use the <b>Refactor</b> 
+    > <b>Move </b>command from the selected resource's pop-up menu, all references 
+    to classes defined in the selected compilation units will be updated.</div>
 
 <p><br><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-3.htm">Java projects</a>
