--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
@@ -35,7 +35,7 @@ Using the Java editor</H1>
   <a href="../tasks/tasks-65.htm">Using content/code assist</a>&nbsp;</p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p><a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
-<a href="../reference/ref-5.htm">Java editor actions</a><br>
+<a href="../reference/ref-java-editor.htm">Java editor actions</a><br>
 <P><br>
 
 &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
