--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-73.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-73.htm
@@ -37,7 +37,7 @@ src="../images/ngrelt.gif" alt="Related tasks"><br>
     <a href="tasks-54.htm">Using the Java editor</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="../images/ngrelr.gif" alt="Related reference"></p>
-  <p><a href="../reference/ref-5.htm">Java editor actions</a><br>
+  <p><a href="../reference/ref-java-editor.htm">Java editor actions</a><br>
     <a href="../reference/ref-24.htm">Views and editors</a></p>
   <p><br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
