--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
@@ -35,7 +35,7 @@
     <a href="tasks-54.htm">Using the Java editor</a> <br>
     &nbsp; 
   <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159> 
-  <p><a href="../reference/ref-5.htm">Java editor actions</a> <br>
+  <p><a href="../reference/ref-java-editor.htm">Java editor actions</a> <br>
     <a href="../reference/ref-24.htm">Views and editors</a> <br>
     &nbsp; 
   <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195> 
