--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
@@ -28,8 +28,10 @@ project proceed as follows:</P>
   <li>Expand Versions, and JanesTeamProject. Observe that under JaneTeamProject there 
         is now a version of this project whose version number is A1. Looking closely 
         at the contents of folder1 you can also see that the version numbers of 
-        the individual files match the version numbers in our Workbench.<blockquote>
-  <p><img align="texttop" border="0" src="../images/Image85_version2.jpg" alt="Repositories View and Navigator View" width="333" height="417"></p>
+        the individual files match the version numbers in our Workbench.
+    <p>&nbsp;</p>
+    <blockquote>
+  <p><img align="texttop" border="0" src="../images/Image85_version2.jpg" alt="Repositories View and Navigator View" width="311" height="294"></p>
 </blockquote>
   </li>
 </ol>
