*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
@@ -7,14 +7,18 @@
 <body bgcolor="#FFFFFF" link="#0000FF" vlink="#0000FF" lang="EN-US" style="tab-interval:.5in">
 
 <div class=Section1>
-<h1>
-Templates</h1>
-
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" />
-    </p>
-
-    <p>
+  <h1> Templates</h1>
+    <p>Templates are often reoccuring source code patterns.
+  <p>The JDT offers support for creating, managing and using templates.
+  <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0">
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"><br>
+    <a href="../tasks/tasks-171.htm">Using 
+    templates</a><br>
+    <a href="../tasks/tasks-203.htm">Writing 
+    your own templates</a>&nbsp;</p>
+  <p><img src="../images/ngrelr.gif" alt="Related reference" /> </p>
+  <p>
       <a href="../reference/ref-menu-edit.htm">Edit menu</a><br />
       <a href="../reference/ref-143.htm">Java Content Assist</a><br />
       <a href="../reference/ref-preferences-templates.htm">Templates preferences</a>
